--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
       <div class="col-8 ">
         <div class="row d-flex align-items-center mt-2">
           <div class="col-6 text-center">
-            <p class="p-0 m-0">maple</p>
-            <p class="p-0 m-0">maple</p>
+            <p class="p-0 m-0">888.goMaple</p>
+            <p class="p-0 m-0">mapleman@syrup.com</p>
           </div>
           <div class="col-6 text-center ">
-            <p class="p-0 m-0">syrup</p>
-            <p class="p-0 m-0">syrup</p>
+            <p class="p-0 m-0">123 Maple Ln</p>
+            <p class="p-0 m-0">Maple, BC, Canada</p>
 
           </div>
         </div>
